devops * Modified client to use env for api url

--- a/ansible/.env.j2
+++ b/ansible/.env.j2
@@ -9,3 +9,4 @@ SMTP_PORT="{{ smtp_port }}"
 SMTP_USERNAME="{{ smtp_username }}"
 SMTP_PASSWORD="{{ smtp_password }}"
 SMTP_SENDER="{{ smtp_sender }}"
+API_BASE_URL="{{ api_base_url }}"
