--- a/ansible/.env.j2
+++ b/ansible/.env.j2
@@ -10,3 +10,5 @@ SMTP_USERNAME="{{ smtp_username }}"
 SMTP_PASSWORD="{{ smtp_password }}"
 SMTP_SENDER="{{ smtp_sender }}"
 API_BASE_URL="{{ api_base_url }}"
+MY_EMAIL="{{ my_email }}"
+MY_DOMAIN="{{ my_domain }}"
